# rust-gob

./: Cargo.toml  README.md
examples/: test.go  test.rs
src/: errors.rs  lib.rs
src/de/: deserializer.rs  field_map.rs  map_access.rs  mod.rs  read_gob.rs  seq_access.rs  slice_decoder.rs  state.rs  value_deserializer.rs
src/types/: mod.rs  type_def.rs  wire_type.rs
tests/: tests.rs
tests/de/: builtins.rs
tests/utils/: go.rs  macros.rs  mod.rs
