[package]
authors = ["panicbit <panicbit.dev@gmail.com>"]
name = "gob"
version = "0.1.0"

[dependencies]
byteorder = "1.0.0"
error-chain = "0.11.0"
log = "0.4.1"
serde = "1.0.8"
serde_derive = "1.0.8"
tempdir = "0.3.5"

[dev-dependencies]
env_logger = "0.5.3"
pretty_assertions = "0.5.0"
serde_bytes = "0.10.3"
